--- a/.github/workflows/ci-quality.yml
+++ b/.github/workflows/ci-quality.yml
@@ -33,16 +33,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: Check MATLAB files exist
-        run: |
-          echo "📝 MATLAB Formatting Check"
-          echo "=========================="
-          echo "Found MATLAB files:"
-          find src tests -name "*.m" | head -10
-          echo ""
-          echo "ℹ️  Note: MBeautifier requires MATLAB Editor which is not available in CI."
-          echo "🔧 To format code locally, run:"
-          echo "   git clone https://github.com/davidvarga/MBeautifier.git .github/scripts/MBeautifier"
-          echo "   matlab -batch \"addpath('.github/scripts'); format_matlab_code\""
-          echo ""
-          echo "✅ Formatting check completed (local formatting recommended)"
+      - name: Set up MATLAB
+        uses: matlab-actions/setup-matlab@v2
+      
+      - name: Run formatting checks
+        uses: matlab-actions/run-command@v2
+        with:
+          command: addpath('.github/scripts'); format_check_simple
