--- a/.github/workflows/ci-quality.yml
+++ b/.github/workflows/ci-quality.yml
@@ -47,9 +47,11 @@ jobs:
         run: |
           echo "🎨 Checking MATLAB code formatting..."
           
-          # Run MISS_HIT and capture output
+          # Run MISS_HIT and capture output (allow non-zero exit codes)
+          set +e
           output=$(mh_style --line_length 140 src/ tests/ config.m simulate.m --brief 2>&1)
           exit_code=$?
+          set -e
           
           echo "$output"
           
@@ -59,7 +61,7 @@ jobs:
             echo "❌ MATLAB formatting issues found!"
             echo ""
             echo "📋 Detailed formatting report:"
-            mh_style --line_length 140 src/ tests/ config.m simulate.m
+            mh_style --line_length 140 src/ tests/ config.m simulate.m || true
             echo ""
             echo "🔧 To fix locally, run: ./format.sh"
             echo "💡 This will automatically fix most formatting issues"
