--- a/.github/workflows/ci-quality.yml
+++ b/.github/workflows/ci-quality.yml
@@ -45,7 +45,7 @@ jobs:
       
       - name: Check MATLAB formatting
         run: |
-          echo "🎨 Checking MATLAB code formatting..."
+          echo "[FORMAT] Checking MATLAB code formatting..."
           
           # Run MISS_HIT and capture output (allow non-zero exit codes)
           set +e
@@ -58,18 +58,18 @@ jobs:
           # Check if there are actual style issues (not just warnings)
           if echo "$output" | grep -q "style:"; then
             echo ""
-            echo "❌ MATLAB formatting issues found!"
+            echo "[ERROR] MATLAB formatting issues found!"
             echo ""
-            echo "📋 Detailed formatting report:"
+            echo "[REPORT] Detailed formatting report:"
             mh_style --line_length 140 src/ tests/ config.m simulate.m || true
             echo ""
-            echo "🔧 To fix locally, run: ./format.sh"
-            echo "💡 This will automatically fix most formatting issues"
+            echo "[FIX] To fix locally, run: ./format.sh"
+            echo "[INFO] This will automatically fix most formatting issues"
             exit 1
           else
             echo ""
-            echo "✅ All MATLAB files are properly formatted!"
+            echo "[PASS] All MATLAB files are properly formatted!"
             if echo "$output" | grep -q "warning:"; then
-              echo "ℹ️  Note: Some harmless encoding warnings were detected but can be ignored"
+              echo "[NOTE] Some harmless encoding warnings were detected but can be ignored"
             fi
           fi
